fix: contrastr

--- a/css/styles.css
+++ b/css/styles.css
@@ -165,7 +165,7 @@ nav h1 a {
   min-width: 100%;
 }
 #restaurants-list li h1 {
-  color: #f18200;
+  color: #d27100;
   font-family: Arial,sans-serif;
   font-size: 14pt;
   font-weight: 200;
